# Producer-Consumer-Plus-Plus

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: consumer.cpp  main.cpp  producer.cpp  queue.cpp  thread_args.cpp  thread_manager.cpp
src/include/: exceptions.hpp  macro_defs.hpp  queue.hpp  thread_args.hpp  thread_manager.hpp  thread_wrappers.hpp  threaded_functions.hpp
